--- a/RingZer0Team/JavaScript/27.md
+++ b/RingZer0Team/JavaScript/27.md
@@ -1,6 +1,7 @@
 # Client side validation is bad!
 
-##Solution
+## Solution
+
 Looking at the page code source, we find the following script:
 ```javascript
 // Look's like weak JavaScript auth script :)
@@ -18,9 +19,16 @@ $(".c_submit").click(function(event) {
 });
 ```
 
-It is clear that the username is `admin` and the password `String.fromCharCode(74,97,118,97,83,99,114,105,112,116,73,115,83,101,99,117,114,101)` that we evaluate in a browser console for example as `JavaScriptIsSecure`.
+It is clear that the username is `admin` and the password:
+
+```
+String.fromCharCode(74,97,118,97,83,99,114,105,112,116,73,115,83,101,99,117,114,101)
+```
+That we evaluate in a browser console for example as `JavaScriptIsSecure`.
 
 Therefore we enter the following:
+|Field  | Value |
+| ------------- | ------------- |
 |username|admin|
 |password|JavaScriptIsSecure|
 
