--- a/RingZer0Team/JavaScript/31.md
+++ b/RingZer0Team/JavaScript/31.md
@@ -1,8 +1,7 @@
-# Is hashing more secure?
+# Then obfuscation is more secure?
 
 ## Solution
 
-### Determine the problem
 Looking at the page code source, we find the following script, that we can indent correctly using an online [beautifier](http://jsbeautifier.org/):
 ```javascript
 // Look's like weak JavaScript auth script :)
