--- a/RingZer0Team/JavaScript/67.md
+++ b/RingZer0Team/JavaScript/67.md
@@ -54,3 +54,7 @@ Therefore we enter the following:
 |password|PassW0RD!289%!*|
 
 And we obtain the Flag `FLAG-gYtLBa66178DG7l28Uu5lW45CR`
+
+## More on AES
+
+Here is a great cartoon that explains [how AES works](http://www.moserware.com/2009/09/stick-figure-guide-to-advanced.html)!
