--- a/RingZer0Team/JavaScript/46.md
+++ b/RingZer0Team/JavaScript/46.md
@@ -50,11 +50,11 @@ Let's assume the key is made out of alphanumerical characters only (set of cardi
 
 We can simplify the problem into a pure XOR function:
 ```
-const func_simp = Array.from(func).map(x => parseInt(x.charCodeAt(0)))
+const funcAsCharCode = Array.from(func).map(x => parseInt(x.charCodeAt(0)))
 
 function getCode(k) {
-	return func_simp
-	  .map((x, i) => func_simp[i] ^ k.charCodeAt(i%9))
+	return funcAsCharCode
+	  .map((x, i) => funcAsCharCode[i] ^ k.charCodeAt(i%9))
 	  .map(x => String.fromCharCode(x))
 	  .join('');
 }
@@ -66,16 +66,16 @@ We can build a function that from the output string will build back the complete
 ```
 /* Adapt to support key with a length lower than 9, printing space otherwise */
 function getCode(k) {
-	return func_simp
+	return funcAsCharCode
 	  // 32 for whitespace
-	  .map((x, i) => i%9<k.length ? func_simp[i] ^ k.charCodeAt(i%9) : 32)
+	  .map((x, i) => i%9<k.length ? funcAsCharCode[i] ^ k.charCodeAt(i%9) : 32)
 	  .map(x => String.fromCharCode(x))
 	  .join('');
 }
 
 function getKeyFromCode(code) {
 	return Array.from(code)
-	  .map((x, i) => func_simp[i]^x.charCodeAt(0))
+	  .map((x, i) => funcAsCharCode[i] ^ x.charCodeAt(0))
 	  .map(x => String.fromCharCode(x))
 	  .join('');
 }
@@ -99,11 +99,182 @@ Thus the key is: `getKeyFromCode('if(u == "') = Bobvi2347`
 
 #### Option 2: Using a XOR analyzer tool
 
-TODO
+Using [xortool](https://github.com/hellman/xortool), we store the `func` string into a file called `data` and we launch the command `xortool data`:
 
-#### Option 3: Deducting the key with probabilities
+```
+The most probable key lengths:
+   3:   13.0%
+   6:   13.3%
+   9:   16.1%
+  11:   12.5%
+  15:   10.9%
+  18:   9.5%
+  20:   5.5%
+  22:   6.7%
+  27:   6.2%
+  30:   6.4%
+Key-length can be 3*n
+Most possible char is needed to guess the key!
+```
 
-TODO
+It finds that the most probable key length is 9 and is asking for the most probable char. 
+
+By taking [jQuery 3.1.0](https://code.jquery.com/jquery-3.1.0.js), we are able to compute a char frequency table for JavaScript:
+
+```
+const jQueryAsText = `/* jQuery */`;
+const toPct = (x, d=2) => `${(Math.floor(100 * Math.pow(10, d) * x) / Math.pow(10, d)).toFixed(d)}%`;
+
+// build array of char count for the 128 ASCII chars
+const getCharCount = input => {
+  const stat = new Array(128).fill(0), unit = 1;
+  Array.from(input).forEach(c => stat[c.charCodeAt(0)] += unit);
+  return stat;
+};
+
+// convert map into array to be able to sort it, then take top 5 and format output
+> const stat = getCharCount(jQueryAsText);
+> stat.map((count, charCode) => ({charCode, count})
+  .sort((a,b) => b.count - a.count)
+  .slice(0, 5)
+  .map(x => `'${String.fromCharCode(x.charCode)}' ${x.charCode} - ${toPct(x.count/jQueryAsText.length)}`)
+```
+
+|Char  | Code | Pct |
+| ------------- | ------------- | ------------- |
+|SPACE|32|12.23%|
+|TAB|9|8.39%|
+|e|101|8.34%|
+|t|116|5.56%|
+|n|110|4.21%|
+
+We try for each of those char. For example for the `SPACE`:
+```
+> xortool data -l 9 -c 32
+300 possible key(s) of length 9:
+\x13}3+{t!u%
+\x13}3+{t!uj
+\x13}3+{t!o%
+\x13}3+{t!oj
+\x13}3+{t!c%
+...
+Found 204 plaintexts with 95.0%+ printable characters
+See files filename-key.csv, filename-char_used-perc_printable.csv
+```
+
+But in the end, none of those char give us the correct password. This option did not work.
+
+I implemented my own tool to solve this kind of encryption: [polyalpha-cracker](https://github.com/jbe456/polyalpha-cracker)
+
+#### Option 3: Using a Vigenère cipher cracking technique
+
+A XOR cipher is similar to a [Vigenère cipher](https://en.wikipedia.org/wiki/Vigenère_cipher) or more generally speaking a polyalphabetic cipher, because the output character is a pure transformation of the input character, with a repeating pattern being the key. The main weaknesses of those type of cipher is the repeating nature of its key and the fact there is [no diffusion and no confusion](https://en.wikipedia.org/wiki/Confusion_and_diffusion). Knowing the statistical properties of the initial text can help you recover the key.
+
+##### Finding the key length
+
+Taking apart the fact that we know it by reading the code, it is possible to guess the key length using one of those two methods: the [Kasiski examination](https://en.wikipedia.org/wiki/Kasiski_examination) and the [Friedman test](https://en.wikipedia.org/wiki/Friedman_test).
+
+We are going to use the latter one. We calculate the coincidence index of a JavaScript text by using the code from [jQuery 3.1.0](https://code.jquery.com/jquery-3.1.0.js) as a sample:
+
+```
+// compute the coincidence index (sum of all probabilities to draw twice the same letter)
+// stat: ASCII array count
+// size: total size of input text
+const getCIFromAsciiArray = (stat, size) => stat.reduce((previousValue, count) => previousValue + (count * (count-1))/(size * (size-1)), 0);
+  
+const getCI = input => {
+  const stat = getCharCount(input), size = input.length;
+  return getCIFromAsciiArray(stat, size);
+};
+
+>getCI(jQueryAsText);
+```
+
+We end up with: `4.501%`
+
+Then for all possible key length (let say from 1 to 20), we compute the coincidence index of the encrypted text:
+
+```
+for(let i=1; i<=20; i++){
+  // initialize array of size and stat
+  const sizes = new Array(i).fill(0);
+  const stats = new Array(i).fill(0).map(x => new Array(128).fill(0));
+  
+  // take the encrypted text and fill up arrays
+  Array.from(func).forEach((c, idx) => {
+    sizes[idx%i] += 1;
+    stats[idx%i][c.charCodeAt(0)] += 1;
+  })
+
+  // we sum all CI and do the average
+  const res = stats.reduce((prev, stat, idx) => prev + getCIFromAsciiArray(stat, sizes[idx]), 0)/i;
+  console.log(i, toPct(res, 3));
+}
+```
+
+| Key Length | Coincidence Index |
+| ------------- | ------------- |
+|1|1.394%|
+|2|1.413%|
+|3|1.934%|
+|4|1.496%|
+|5|1.299%|
+|6|1.930%|
+|7|1.042%|
+|8|1.430%|
+|9|**3.498%**|
+|10|1.541%|
+|11|1.731%|
+|12|2.022%|
+|13|1.470%|
+|14|1.046%|
+|15|2.119%|
+|16|1.176%|
+|17|1.174%|
+|18|**3.127%**|
+|19|0.895%|
+|20|1.272%|
+
+We conclude that the key is of size `9*n` and most probably 9. This is because the CI is much higher and closer to the JavaScript CI calculated above.
+
+##### Finding the key
+
+```
+// Calculate the "square" distance between two numeric arrays of the same size
+const distance = (a, b) => a.reduce((previous, elt, idx) => previous + Math.pow(elt - b[idx], 2), 0);
+
+// base JavaScript char frequencies that we will use as a base comparison
+const sampleFreq = getCharCount(jQueryAsText).map(c => c/jQueryAsText.length);
+
+const keyLength = 9;
+const result = new Array(keyLength).fill(0).map(x => new Array(128).fill(0));
+
+for (let xored=0; xored<128; xored++) {
+  const sizes = new Array(keyLength).fill(0);
+  const charCount = new Array(keyLength).fill(0).map(x => new Array(128).fill(0));
+  
+  Array.from(cipher).forEach((c, idx) => {
+    sizes[idx%keyLength] += 1;
+    charCount[idx%keyLength][c.charCodeAt(0)^xored] += 1;
+  });
+
+  for (let k=0; k<keyLength; k++) {
+    result[k][xored] = distance(charCount[k].map(x => x/sizes[k]), sampleFreq);
+  }
+}
+
+const output = result.map(distances => distances
+  .map((distance, charCode) => ({charCode, distance}))
+  .sort((a,b) => a.distance - b.distance)[0].charCode);
+
+console.log(output.map(x => String.fromCharCode(x)).join(''));
+```
+
+Which returns the password `Bobvi2347`.
+
+All the above code have been put together into a nice CLI: [polyalpha-cracker](https://github.com/jbe456/polyalpha-cracker)
+
+### Get the flag
 
 Therefore we enter the following:
 
