--- a/RingZer0Team/JavaScript/31.md
+++ b/RingZer0Team/JavaScript/31.md
@@ -35,7 +35,7 @@ $(_0xc360[12])[_0xc360[11]](function() {
 
 We simply need to "desobfuscate" the previous code by replacing each call to the array `_0xc360` containing strings as hexadecimal by its decoded string value.
 
-```
+```javascript
 // create the array
 const values = [/*...*/];
 const code = '$(_0xc360[12])[_0xc360[11]](function (){var _0xf382x1=$(_0xc360[1])[_0xc360[0]]();var _0xf382x2=_0xc360[2];if(_0xf382x1==_0xc360[3]+_0xf382x2){if(document[_0xc360[7]][_0xc360[6]][_0xc360[5]](_0xc360[4])==-1){document[_0xc360[7]]=document[_0xc360[7]][_0xc360[6]]+_0xc360[4]+_0xf382x1;} ;} else {$(_0xc360[10])[_0xc360[9]](_0xc360[8]);} ;} );';
@@ -45,7 +45,7 @@ code.replace(/_0xc360\[(\d+)\]/g, (match, index) => `'${values[index]}'`);
 ```
 
 That gives us the following script:
-```
+```javascript
 $('.c_submit')['click'](function() {
     var _0xf382x1 = $('#cpass')['val']();
     var _0xf382x2 = 'alk3';
