--- a/RingZer0Team/JavaScript/34.md
+++ b/RingZer0Team/JavaScript/34.md
@@ -34,12 +34,12 @@ $(".c_submit").click(function(event) {
 
 We can see the username must be equal to `administrator` and the password must, for each character, satisfy the condition:
 
-```
+```javascript
 u.charCodeAt(i) + p.charCodeAt(i) + i * 10 == k[i]
 ```
 
 Therefore, the password is defined as:
-```
+```javascript
 const k = new Array(176,214,205,246,264,255,227,237,242,244,265,270,283);
 
 Array.from("administrator")
