--- a/RingZer0Team/JavaScript/58.md
+++ b/RingZer0Team/JavaScript/58.md
@@ -90,7 +90,7 @@ By trying the following value `abcd-efgh-ijkl-mnop-qrst`, we end up with the con
 ```
 
 Characters are just moved around, so we can resolve it:
-```
+```javascript
 Array.from('abcd-efgh-ijkl-mnop-qrst')
 	.map(c => {
 		const i = '{t:\'bcq\',p:\'fgm\',l:\'jki\',h:\'noe\',d:\'rsa\'}'.indexOf(c);
