--- a/RingZer0Team/JavaScript/67.md
+++ b/RingZer0Team/JavaScript/67.md
@@ -36,7 +36,7 @@ The password has been crypted using [Advanced Encryption Standard or AES](https:
 
 It can be decrypted using the same [CryptoJS](https://code.google.com/archive/p/crypto-js/) library.
 
-```
+```javascript
 const decrypted = CryptoJS.AES.decrypt(
 	'ob1xQz5ms9hRkPTx+ZHbVg==', 
 	CryptoJS.enc.Hex.parse(k.toString().substring(0,32)), 
