--- a/RingZer0Team/JavaScript/27.md
+++ b/RingZer0Team/JavaScript/27.md
@@ -21,7 +21,7 @@ $(".c_submit").click(function(event) {
 
 It is clear that the username is `admin` and the password:
 
-```
+```javascript
 String.fromCharCode(74,97,118,97,83,99,114,105,112,116,73,115,83,101,99,117,114,101)
 ```
 That we evaluate in a browser console for example as `JavaScriptIsSecure`.
