--- a/RingZer0Team/JavaScript/46.md
+++ b/RingZer0Team/JavaScript/46.md
@@ -49,7 +49,7 @@ Reading the code, we find out that the username is used as a key of length 9 to 
 Let's assume the key is made out of alphanumerical characters only (set of cardinality 36), it means there are approximatively at least `9^36 = 2 * 10^34` possible keys to try out. This is way too much to brute force for the machine we have in hand.
 
 We can simplify the problem into a pure XOR function:
-```
+```javascript
 const funcAsCharCode = Array.from(func).map(x => parseInt(x.charCodeAt(0)))
 
 function getCode(k) {
@@ -63,7 +63,7 @@ function getCode(k) {
 #### Option 1: Guessing the key by trial
 
 We can build a function that from the output string will build back the complete string, leaving blank space otherwise:
-```
+```javascript
 /* Adapt to support key with a length lower than 9, printing space otherwise */
 function getCode(k) {
 	return funcAsCharCode
@@ -88,7 +88,7 @@ We know the output is supposed to be ES5 JavaScript. We can try multiple possibl
 
 Knowing the variable `u` hasn't been used yet, we find out that `if(u == "` gives the following output:
 
-```
+```javascript
 > getCode(getKeyFromCode('if(u == "'))
 if(u == "XorIsCoolButNotUnbreakable") { if(document.location.href.indexOf("?p=") == -1) { document.location = document.location.href + "?p=" + u; } } else {  $("#cresponse").html("<div class='error'>Wrong password sorry.</div>"); }   
 ```
@@ -121,7 +121,7 @@ It finds that the most probable key length is 9 and is asking for the most proba
 
 By taking [jQuery 3.1.0](https://code.jquery.com/jquery-3.1.0.js), we are able to compute a char frequency table for JavaScript:
 
-```
+```javascript
 const jQueryAsText = `/* jQuery */`;
 const toPct = (x, d=2) => `${(Math.floor(100 * Math.pow(10, d) * x) / Math.pow(10, d)).toFixed(d)}%`;
 
@@ -149,7 +149,7 @@ const getCharCount = input => {
 |n|110|4.21%|
 
 We try for each of those char. For example for the `SPACE`:
-```
+```javascript
 > xortool data -l 9 -c 32
 300 possible key(s) of length 9:
 \x13}3+{t!u%
@@ -176,7 +176,7 @@ Taking apart the fact that we know it by reading the code, it is possible to gue
 
 We are going to use the latter one. We calculate the coincidence index of a JavaScript text by using the code from [jQuery 3.1.0](https://code.jquery.com/jquery-3.1.0.js) as a sample:
 
-```
+```javascript
 // compute the coincidence index (sum of all probabilities to draw twice the same letter)
 // stat: ASCII array count
 // size: total size of input text
@@ -194,7 +194,7 @@ We end up with: `4.501%`
 
 Then for all possible key length (let say from 1 to 20), we compute the coincidence index of the encrypted text:
 
-```
+```javascript
 for(let i=1; i<=20; i++){
   // initialize array of size and stat
   const sizes = new Array(i).fill(0);
@@ -239,7 +239,7 @@ We conclude that the key is of size `9*n` and most probably 9. This is because t
 
 ##### Finding the key
 
-```
+```javascript
 // Calculate the "square" distance between two numeric arrays of the same size
 const distance = (a, b) => a.reduce((previous, elt, idx) => previous + Math.pow(elt - b[idx], 2), 0);
 
