--- a/RingZer0Team/Web/75.md
+++ b/RingZer0Team/Web/75.md
@@ -5,7 +5,7 @@
 ### Determine the problem
 The challenge starts on a website with the following url `http://ringzer0team.com:1008/?page=lorem.php`. This is typically vulnerable for [Local File Inclusion attack](https://www.owasp.org/index.php/Testing_for_Local_File_Inclusion). 
 
-### Determine the LFI method by triggering an error
+### Option 1: Determine the LFI method by triggering an error
 By changing `lorem.php` to `anything` we obtain the following error message:
 
 ```
@@ -14,11 +14,11 @@ Warning: require(anything): failed to open stream: No such file or directory in 
 Fatal error: require(): Failed opening required 'anything' (include_path='.:/usr/share/php:/usr/share/pear') in /var/www/html/index.php on line 43
 ```
 
-Which tell us:
-* it using a PHP unprotected `require`
+Which tells us:
+* it is using a PHP unprotected `require` method
 * it is using a linux system
 
-### Determine the LFI method from the code source
+### Option 2: Determine the LFI method from the code source
 We can also obtain the source code of the page using the [PHP filter](http://php.net/manual/en/filters.convert.php) `php://filter/convert.base64-encode/resource=$filename` available since PHP 5.0.0: `http://ringzer0team.com:1008/?page=php://filter/convert.base64-encode/resource=index.php`
 
 We obtain the source code encoded in base64:
