--- a/RingZer0Team/SQL-Injection/2.md
+++ b/RingZer0Team/SQL-Injection/2.md
@@ -2,7 +2,7 @@
 
 ## Solution
 
-We use the most basic [SQL injection](https://www.owasp.org/index.php/SQL_Injection). We edit the HTML to obtain:
+We edit the HTML to obtain:
 
 ```
 <select class="form-control" name="username">
