--- a/RingZer0Team/SQL-Injection/3.md
+++ b/RingZer0Team/SQL-Injection/3.md
@@ -14,7 +14,7 @@ We then try `test' or '1'='1`:
 Illegal characters detected.
 ```
 
-After several trial we understand the `=` sign is detected as an illegal character. So we simply transform the above condition into `test' or true or '`
+After several trials we understand the `=` sign is detected as an illegal character. So we simply transform the above condition into `test' or true or '`
 
 ```
 SELECT ... FROM ... WHERE username='test' or true or '' AND password=''
