--- a/RingZer0Team/Steganography/118.md
+++ b/RingZer0Team/Steganography/118.md
@@ -4,6 +4,6 @@
 
 Looking closely at the map, we can find the flag while zooming:
 
-![map](./118-map.png "Zoomed Map")
+![map](./118/map.png "Zoomed Map")
 
 And we obtain the Flag `flaghsdf83ksk22`
