--- a/RingZer0Team/Steganography/136.md
+++ b/RingZer0Team/Steganography/136.md
@@ -14,10 +14,10 @@ After some research, we find that it is possible to [display a specific image in
 
 Using [Spek](http://spek.cc/) or [Sonic Visualizer](http://www.sonicvisualiser.org/), we obtain the following diagram:
 
-![spectrum-analysis](./136-spectrum.png "Spectrum Analysis")
+![spectrum-analysis](./136/spectrum.png "Spectrum Analysis")
 
 We can see a sign that looks like a QR code in the spectrum: in fact it is an [Aztec code](https://en.wikipedia.org/wiki/Aztec_Code). After some manipulation using Gimp to process the image we obtain the following aztec code that we can scan using a phone barcode scanner application like [QR Code Reader Extreme](https://play.google.com/store/apps/details?id=com.fancyapp.qrcode.barcode.scanner.reader&hl=en):
 
-![aztec-code](./136-aztec.png "Aztec Code")
+![aztec-code](./136/aztec.png "Aztec Code")
 
 And we obtain the text `the flag is: mathsRulesTheUniverse`
