--- a/RingZer0Team/Steganography/71.md
+++ b/RingZer0Team/Steganography/71.md
@@ -40,4 +40,4 @@ Using a [text diff algorithm tool](https://text-compare.com/), we obtain:
 14	Est la chanson d<b>e</b>s amours.		14	Est la chanson d<b>ai</b>s amours.
 </pre>
 
-And we obtain the flag `flagarenice`
+The dif letters form the flag `flagarenice`
