--- a/RingZer0Team/Steganography/18.md
+++ b/RingZer0Team/Steganography/18.md
@@ -67,4 +67,4 @@ Diffing the bytes between the two files, we can see that nearly all of them diff
 
 ![kangaroo-diff](./18/kangaroo.diff.png "Diff Kangaroo Image")
 
-By analyzing the color differenc we can see it is very subtle: a variation of +/- 1 in RGB values.
+By analyzing the color difference we can see a very subtle variation of +/- 1 in RGB values.
