--- a/RingZer0Team/Forensics/103.md
+++ b/RingZer0Team/Forensics/103.md
@@ -1,5 +1,9 @@
 # Dr. Pouce
 
+## Decription
+
+https://ringzer0team.com/challenges/103
+
 ## Solution
 
 From the instructions given, we need to figure out a location and an author. We simply need to look at the file's metadata.
@@ -71,7 +75,7 @@ Focal Length                    : 4.0 mm
 Light Value                     : 4.1
 ```
 
-Using Google Maps, we determine the location to be the city `Halifax`.
+Using Google Maps, we determine the location to be the city `H******`.
 
 ### Author
 
@@ -93,14 +97,14 @@ PDF Version                     : 1.4
 Linearized                      : No
 Page Count                      : 1
 Language                        : fr-CA
-Author                          : Steve Finger
+Author                          : S**** F*****
 Creator                         : Writer
 Producer                        : LibreOffice 3.5
 Create Date                     : 2014:03:19 21:30:22-04:00
 ```
 
-The author is `Steve Finger`.
+The author is `S**** F*****`
 
 ### Finding the flag
 
-From the instructions the answer format is `cityfirstnamelastname` which gives us the following flag: `halifaxstevefinger`
+From the instructions the answer format is `cityfirstnamelastname` which gives us the following flag: `h******s****f*****`
