--- a/RingZer0Team/Forensics/20.md
+++ b/RingZer0Team/Forensics/20.md
@@ -1,12 +1,14 @@
 # I made a dd of Agent Smith usb key
 
+## Description
+
+https://ringzer0ctf.com/challenges/20
+
 ## Solution
 
 We download the file and make a case insensitive search for the keyword `flag`. This can be done using a text editor, an hexadecimal editor or using the command line:
 
 ```
 >strings 86b265d37d1fc10b721a2accae04a60d |grep -i flag
-FLAG-ggmgk05096
+FLAG-**********
 ```
-
-We then obtain the Flag `FLAG-ggmgk05096`
