--- a/RingZer0Team/Forensics/65.md
+++ b/RingZer0Team/Forensics/65.md
@@ -1,4 +1,8 @@
-# HIde my ass in home
+# Hide my ass in home
+
+## Description
+
+https://ringzer0team.com/challenges/65
 
 ## Solution
 
@@ -33,11 +37,9 @@ We then make a case insensitive search on all files for the keyword `flag`. Usin
 Binary file .me.swp matches
 ```
 
-We look at `.me.swp` file content:
+We look at `.me.swp` file content and find the FLAG:
 ```
 >cat .me.swp
 b0VIM 7.2|▒S
-U3210#"! Utpad▒▒▒▒▒▒▒▒Flag-1s4g76jk89ffull of full and sunfull and i'm beautifull 
+U3210#"! Utpad▒▒▒▒▒▒▒▒Flag-*************** of full and sunfull and i'm beautifull 
 ```
-
-We then obtain the Flag `Flag-1s4g76jk89ffull`
