Update existing RingZer0Team content

--- a/RingZer0Team/JavaScript/27.md
+++ b/RingZer0Team/JavaScript/27.md
@@ -1,5 +1,9 @@
 # Client side validation is bad!
 
+## Description
+
+https://ringzer0team.com/challenges/27
+
 ## Solution
 
 Looking at the page code source, we find the following script:
@@ -33,4 +37,4 @@ Therefore we enter the following:
 |username|admin|
 |password|JavaScriptIsSecure|
 
-And we obtain the Flag `FLAG-66Jq5u688he0y46564481WRh`
+And we obtain the Flag `FLAG-************************`
