--- a/RingZer0Team/JavaScript/30.md
+++ b/RingZer0Team/JavaScript/30.md
@@ -1,5 +1,9 @@
 # Is hashing more secure?
 
+## Description
+
+https://ringzer0team.com/challenges/30
+
 ## Solution
 
 ### Determine the problem
@@ -210,4 +214,4 @@ Therefore we enter the following:
 | ------------- | ------------- |
 |password|adminz|
 
-And we obtain the Flag `FLAG-bXNsYg9tLCaIX6h1UiQMmMYB`
+And we obtain the Flag `FLAG-************************`
