--- a/RingZer0Team/JavaScript/34.md
+++ b/RingZer0Team/JavaScript/34.md
@@ -1,5 +1,9 @@
 # Why not?
 
+## Description
+
+https://ringzer0team.com/challenges/34
+
 ## Solution
 
 Looking at the page code source, we find the following script:
@@ -57,4 +61,4 @@ Therefore we enter the following:
 |username|administrator|
 |password|OhLord4309111|
 
-And we obtain the Flag `FLAG-65t23674o6N2NehA44272G24`
+And we obtain the Flag `FLAG-************************`
