--- a/RingZer0Team/JavaScript/46.md
+++ b/RingZer0Team/JavaScript/46.md
@@ -1,5 +1,9 @@
 # Why not be more secure?
 
+## Description
+
+https://ringzer0team.com/challenges/46
+
 ## Solution
 
 ### Determine the problem
@@ -283,4 +287,4 @@ Therefore we enter the following:
 |username|Bobvi2347|
 |password|XorIsCoolButNotUnbreakable|
 
-And we obtain the Flag `FLAG-rhwMJNczASAJ4WgwfIA7fcJD`
+And we obtain the Flag `FLAG-************************`
