--- a/RingZer0Team/JavaScript/58.md
+++ b/RingZer0Team/JavaScript/58.md
@@ -1,5 +1,9 @@
 # Valid key required
 
+## Description
+
+https://ringzer0team.com/challenges/58
+
 ## Solution
 
 Looking at the page code source, we find the following script:
@@ -107,4 +111,4 @@ Therefore we enter the following:
 | ------------- | ------------- |
 |key|ABGH-3jeK-LM2j-pL2J-8r1T|
 
-And we obtain the Flag `FLAG-ONj755sYn2Js8C96h2L662Jz`
+And we obtain the Flag `FLAG-************************`
