--- a/RingZer0Team/JavaScript/67.md
+++ b/RingZer0Team/JavaScript/67.md
@@ -1,5 +1,9 @@
 # Most Secure Crypto Algo
 
+## Description
+
+https://ringzer0team.com/challenges/67
+
 ## Solution
 
 Looking at the page code source, we find the following script:
@@ -53,7 +57,7 @@ Therefore we enter the following:
 | ------------- | ------------- |
 |password|PassW0RD!289%!*|
 
-And we obtain the Flag `FLAG-gYtLBa66178DG7l28Uu5lW45CR`
+And we obtain the Flag `FLAG-**************************`
 
 ## More on AES
 
