--- a/RingZer0Team/SQL-Injection/1.md
+++ b/RingZer0Team/SQL-Injection/1.md
@@ -1,5 +1,9 @@
 # Most basic SQLi pattern
 
+## Description
+
+https://ringzer0team.com/challenges/1
+
 ## Solution
 
 By submitting `test'` we receive the following error message:
