--- a/RingZer0Team/SQL-Injection/2.md
+++ b/RingZer0Team/SQL-Injection/2.md
@@ -1,5 +1,9 @@
 # ACL rulezzz the world
 
+## Description
+
+https://ringzer0team.com/challenges/2
+
 ## Solution
 
 We edit the HTML to obtain:
@@ -23,28 +27,28 @@ We then submit it and obtain the following HTML in return:
 <tr><td>admin</td><td>users</td><td>Users</td></tr>
 <tr><td>charles</td><td>users</td><td>Users</td></tr>
 <tr><td>cedrick</td><td>users</td><td>Users</td></tr>
-<tr><td>admin</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>charles</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>cedrick</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
+<tr><td>admin</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>charles</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>cedrick</td><td>flags</td><td>FLAG-**********************</td></tr>
 <tr><td>admin</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>charles</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>cedrick</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>admin</td><td>users</td><td>Users</td></tr>
 <tr><td>charles</td><td>users</td><td>Users</td></tr>
 <tr><td>cedrick</td><td>users</td><td>Users</td></tr>
-<tr><td>admin</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>charles</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>cedrick</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
+<tr><td>admin</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>charles</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>cedrick</td><td>flags</td><td>FLAG-**********************</td></tr>
 <tr><td>admin</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>charles</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>cedrick</td><td>admins</td><td>Administrateurs</td></tr>
 <tr><td>admin</td><td>users</td><td>Users</td></tr>
 <tr><td>charles</td><td>users</td><td>Users</td></tr>
 <tr><td>cedrick</td><td>users</td><td>Users</td></tr>
-<tr><td>admin</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>charles</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
-<tr><td>cedrick</td><td>flags</td><td>FLAG-sdfoip340e89rfuj34woit</td></tr>
+<tr><td>admin</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>charles</td><td>flags</td><td>FLAG-**********************</td></tr>
+<tr><td>cedrick</td><td>flags</td><td>FLAG-**********************</td></tr>
 </tbody></table>
 ```
 
-And we obtain the Flag `FLAG-sdfoip340e89rfuj34woit`
+And we obtain the Flag `FLAG-**********************`
