--- a/RingZer0Team/Steganography/118.md
+++ b/RingZer0Team/Steganography/118.md
@@ -1,5 +1,9 @@
 # You're lost? Use the map
 
+## Description
+
+https://ringzer0team.com/challenges/118
+
 ## Solution
 
 Looking closely at the map, we can find the flag while zooming:
