--- a/RingZer0Team/Steganography/122.md
+++ b/RingZer0Team/Steganography/122.md
@@ -1,5 +1,9 @@
 # Brainsick
 
+## Description
+
+https://ringzer0team.com/challenges/122
+
 ## Solution
 
 We first open the `gif` file with a [hexadecimal editor](https://mh-nexus.de/en/hxd/). Searching for keywords we find the string `flag.gif` which is suspicious.
@@ -14,4 +18,4 @@ Using 7-zip to open the file, we find out that there is indeed an archive contai
 
 ![hidden-gif](./122/flag.gif "Hidden Gif")
 
-And we obtain the flag `FLAG-Th2K4s83uQh9xA`.
+And we obtain the flag `FLAG-**************`.
