--- a/RingZer0Team/Steganography/136.md
+++ b/RingZer0Team/Steganography/136.md
@@ -1,5 +1,9 @@
 # SigID Level 1
 
+## Description
+
+https://ringzer0team.com/challenges/136
+
 ## Solution
 
 We first open the `ogg` audio file with a [hexadecimal editor](https://mh-nexus.de/en/hxd/). We could also take a look at the field `COMMENTS` in the file media information.
