--- a/RingZer0Team/Steganography/18.md
+++ b/RingZer0Team/Steganography/18.md
@@ -1,5 +1,9 @@
 # Look inside the house
 
+## Description
+
+https://ringzer0team.com/challenges/18
+
 ## Solution
 
 We first open the `jpg` image file with a [hexadecimal editor](https://mh-nexus.de/en/hxd/) and search for any string but we find nothing in there.
@@ -13,10 +17,10 @@ extracting data... done
 checking crc32 checksum... ok
 writing extracted data to "flag.txt"... done
 >cat flag.txt
-FLAG-5jk682aqoepoi582r940oow
+FLAG-***********************
 ```
 
-And we obtain the text `FLAG-5jk682aqoepoi582r940oow`
+And we obtain the text `FLAG-***********************`
 
 ## More on steghide
 
