--- a/RingZer0Team/Steganography/188.md
+++ b/RingZer0Team/Steganography/188.md
@@ -1,5 +1,9 @@
 # Hidden In Plain Sight
 
+## Description
+
+https://ringzer0team.com/challenges/188
+
 ## Solution
 
 Looking more closely at the text, we can see some hexadecimal code differ from the text. To see all the differences, we process the given text:
@@ -113,4 +117,4 @@ const provided = Array.from(providedText);
 Array.from(textFromHexa.replace(/\n/g, ' ')).map((c, i) => c !== provided[i] && c !== '.' ? c : undefined).filter(c => c !== undefined).join('')
 ```
 
-Which gives us the flag `FLAG-NothingIsEverWhatItSeems`
+Which gives us the flag `FLAG-************************`
