--- a/RingZer0Team/Steganography/231.md
+++ b/RingZer0Team/Steganography/231.md
@@ -1,5 +1,9 @@
 # I'm Goronyo Babad Nigerian prince
 
+## Description
+
+https://ringzer0team.com/challenges/231
+
 ## Solution
 
 We are looking for technique to hide text using text (aka Steganography with text). We find the service [Spam Mimic](http://www.spammimic.com/) which encodes any message into spam-like text.
