--- a/RingZer0Team/Steganography/70.md
+++ b/RingZer0Team/Steganography/70.md
@@ -1,5 +1,9 @@
 # Victor you're hidding me something
 
+## Description
+
+https://ringzer0team.com/challenges/70
+
 ## Solution
 
 We can see that the first letter of the first 4 sentences represent the word `FLAG`. We therefore build the flag by concatenating each first letter:
