--- a/RingZer0Team/Steganography/71.md
+++ b/RingZer0Team/Steganography/71.md
@@ -1,5 +1,9 @@
 # Victor reloaded
 
+## Description
+
+https://ringzer0team.com/challenges/71
+
 ## Solution
 
 Looking at the text, we can see multiple mistakes. We then find the original by Victor Hugo
