--- a/RingZer0Team/Web/212.md
+++ b/RingZer0Team/Web/212.md
@@ -1,5 +1,9 @@
 # Big Brother is watching
 
+## Description
+
+https://ringzer0team.com/challenges/212
+
 ## Solution
 
 Using the given tip, we search about a way to prevent Google engine from indexing content. We then find out that a website can use `robots.txt` for such a purpose.
@@ -16,4 +20,4 @@ User-agent: *
 Disallow: /16bfff59f7e8343a2643bdc2ee76b2dc/
 ```
 
-And by going to https://ringzer0team.com/16bfff59f7e8343a2643bdc2ee76b2dc/, we obtain the Flag `FLAG-G5swO95w0c7R5fq0sa85nVs5dK49O04i`
+And by going to https://ringzer0team.com/16bfff59f7e8343a2643bdc2ee76b2dc/, we obtain the Flag `FLAG-********************************`
