--- a/RingZer0Team/Web/45.md
+++ b/RingZer0Team/Web/45.md
@@ -1,5 +1,9 @@
 # Security thru obscurity!
 
+## Description
+
+https://ringzer0team.com/challenges/45
+
 ## Solution
 
 The first time we load the page we have the following message: `You don't have admin access.`. A refresh few seconds later leads to a different message: `Expired cookie.`
@@ -18,4 +22,4 @@ cookie = part_1:md5_hash(part_1)
 
 Since the message is about an expired date, we update the timestamp part using a new date in the future: `let date = new Date(); date.setYear(2100); date.getTime();// 4132265442871`. After multiple attempts, we also update the username to `admin` and switch the "admin" flag from `false` to `true`. We obtain the following value `admin,7a84757e0489e38c,4132265442871,true:4f4f6c45553d562172e6f46131f4f433` that we encode [back to Base64](https://www.base64encode.org/). 
 
-We then set the cookie using JavaScript `document.cookie = 'AUTH=YWRtaW4sN2E4NDc1N2UwNDg5ZTM4Yyw0MTMyMjY1NDQyODcxLHRydWU6NGY0ZjZjNDU1NTNkNTYyMTcyZTZmNDYxMzFmNGY0MzM=;'` and obtain the flag `FLAG-Feg03OSzWhxO03K94108100f`.
+We then set the cookie using JavaScript `document.cookie = 'AUTH=YWRtaW4sN2E4NDc1N2UwNDg5ZTM4Yyw0MTMyMjY1NDQyODcxLHRydWU6NGY0ZjZjNDU1NTNkNTYyMTcyZTZmNDYxMzFmNGY0MzM=;'` and obtain the flag `FLAG-************************`.
