--- a/RingZer0Team/Web/48.md
+++ b/RingZer0Team/Web/48.md
@@ -1,5 +1,9 @@
 # Area 51
 
+## Description
+
+https://ringzer0team.com/challenges/48
+
 ## Solution
 
 Using a tool like [Postman](https://www.getpostman.com/) we are able to try out multiple HTTP methods. It appears that `GET` and `POST` are protected but not the others. Using `PUT`:
@@ -9,10 +13,8 @@ Using a tool like [Postman](https://www.getpostman.com/) we are able to try out 
 	<br />
 	<span class="red">AREA 51</span> The origin of the Area 51 name is unclear? Alien?
 	<br />
-	<div class="alert alert-info" role="alert">FLAG-w4KRr557y626izv567758O52</div>
+	<div class="alert alert-info" role="alert">FLAG-************************</div>
 	<br />
 	<br />
 </div>
 ```
-
-And we obtain the Flag `FLAG-w4KRr557y626izv567758O52`
