--- a/RingZer0Team/Web/76.md
+++ b/RingZer0Team/Web/76.md
@@ -1,5 +1,9 @@
 # Looking for the flag?
 
+## Description
+
+https://ringzer0team.com/challenges/76
+
 ## Solution
 
 ### Determine the problem
@@ -30,7 +34,7 @@ That we can decode:
 error_reporting(E_ALL);
 ini_set('display_errors', 1);
 $include = isset($_GET['page']) ? $_GET['page'] : 'lorem.php';
-// FLAG-MeCXGBsrLlYtdxlxSbumtUbb4J
+// FLAG-**************************
 ?>
 <!DOCTYPE html>
 <html lang="en">
@@ -83,4 +87,4 @@ $include = isset($_GET['page']) ? $_GET['page'] : 'lorem.php';
 </html>
 ```
 
-And we obtain the Flag `FLAG-MeCXGBsrLlYtdxlxSbumtUbb4J`
+And we obtain the Flag `FLAG-**************************`
