--- a/RingZer0Team/JavaScript/31.md
+++ b/RingZer0Team/JavaScript/31.md
@@ -1,5 +1,9 @@
 # Then obfuscation is more secure?
 
+## Description
+
+https://ringzer0team.com/challenges/31
+
 ## Solution
 
 Looking at the page code source, we find the following script, that we can indent correctly using an online [beautifier](http://jsbeautifier.org/):
@@ -68,4 +72,4 @@ Therefore we enter the following:
 | ------------- | ------------- |
 |password|02l1alk3|
 
-And we obtain the Flag `FLAG-5PJne3T8d73UGv4SCqN44DXj`
+And we obtain the Flag `FLAG-************************`
