--- a/RingZer0Team/Steganography/22.md
+++ b/RingZer0Team/Steganography/22.md
@@ -1,9 +1,13 @@
 # TAPS team have recorded some ghost sound
 
+## Description
+
+https://ringzer0team.com/challenges/22
+
 ## Solution
 
 We do a spectrum analysis of the audio file. Using [Spek](http://spek.cc/) or [Sonic Visualizer](http://www.sonicvisualiser.org/), we obtain the following diagram:
 
 ![spectrum-analysis](./22/spectrum.png "Spectrum Analysis")
 
-We can see directly the flag from the spectrum `FLAG-t23jgjr8`
+We can see directly the flag from the spectrum `FLAG-********`
