--- a/RingZer0Team/Web/43.md
+++ b/RingZer0Team/Web/43.md
@@ -1,11 +1,13 @@
 # Headache
 
+## Description
+
+https://ringzer0team.com/challenges/43
+
 ## Solution
 
 After some research we find a HTTP header `flag` among the response headers.
 
 ```
-Flag: FLAG-365m4fU5p2DVEQbfrptDE5Ru
+Flag: FLAG-************************
 ```
-
-And we obtain the Flag `FLAG-365m4fU5p2DVEQbfrptDE5Ru`
