--- a/RingZer0Team/SQL-Injection/1.md
+++ b/RingZer0Team/SQL-Injection/1.md
@@ -29,4 +29,4 @@ SELECT ... FROM ... WHERE username='test' or '1'='1' AND password=''
 |username|whatever' or '1'='1|
 |password|/* Any value, does not matter */|
 
-And we obtain the Flag `FLAG-238974289383274893`
+And we obtain the Flag `FLAG-******************`
